# boggle

./: package-lock.json  package.json  tailwind.config.js  typings.d.ts  vite.config.ts
boggle/: Cargo.toml
boggle-solver/: package-lock.json  package.json  wrangler.toml
boggle/src/: lib.rs
src/: global.css  root.tsx  trie.js
src/boggle/: .gitignore  Cargo.toml
src/boggle/pkg/: boggle.d.ts  boggle.js  boggle_bg.wasm  boggle_bg.wasm.d.ts  package.json
src/boggle/src/: board.rs  dictionary.rs  generate_board.rs  lib.rs  solver.rs  trie.rs
src/components/boggle/: Board.tsx  BoggleRoot.tsx  Controls.tsx  LetterCube.tsx  WordsList.tsx  WordsPanel.tsx  context.tsx  index.tsx  models.ts  worker.ts
src/components/boggle/board/: Board.tsx  LetterCube.tsx
src/components/boggle/boggle-solver/: Cargo.toml
src/components/boggle/boggle-solver/pkg/: boggle_solver.d.ts  boggle_solver.js  boggle_solver_bg.wasm  boggle_solver_bg.wasm.d.ts  package.json
src/components/boggle/boggle-solver/src/: board.rs  dictionary.rs  lib.rs  solver.rs  trie.rs
src/components/boggle/controls/: Controls.tsx  WordsList.tsx  WordsPanel.tsx
src/components/boggle/logic/: api.ts  board.ts  boggle.ts  confetti.ts  generateBoard.ts  server.ts  trie.ts
src/components/boggle/user/: UserGameStats.tsx
src/components/header/: header.css  header.tsx
src/features/boggle/: index.tsx  models.ts  server.logic.ts  worker.ts
src/features/boggle/components/: Answers.tsx  Board.tsx  BoggleBoard.tsx  (+6 more)
src/routes/: index.tsx  layout.tsx  service-worker.ts
src/routes/boggle/: index.tsx
(+15 files in other folders)
